--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,37 +2,37 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.joke{
+  border: 5px solid black;
+  width: 40%;
+  margin: 0 auto;
+  border-radius: 10px;
+  font-weight: 900;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+button{
+  margin: 1% 2%;
+  padding: 1%;
+  border-radius: 10px;
+  background: #000;
+  color: #fff;
+}
+/* Ten Jokes  */
+.ten-joke{
+  border: 5px solid black;
+  width: 20%;
+  border-radius: 10px;
+  font-weight: 900;
+  margin: 1%;
+  padding: 0 1%;
+}
+
+.ten-jokes{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-around;
+  flex-flow: row wrap;
 }
