--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,8 @@ h1{
   margin: 0 auto;
   border-radius: 10px;
   font-weight: 900;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
 }
 
 button{
@@ -29,6 +31,9 @@ button{
   font-weight: 900;
   margin: 1%;
   padding: 0 1%;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+
 }
 
 .ten-jokes{
